Adds  file upload, averagecost features to bootcamp
