# app.js
@@ -3,10 +3,12 @@ const dotenv = require('dotenv');
 const morgan = require('morgan');
 // const logger = require('./middleware/logger');
 const colors = require('colors');
+const fileupload = require('express-fileupload');
 const errorHandler = require('./middleware/error');
 const connectDb = require('./config/db');
 const swaggerUi = require('swagger-ui-express');
 const YAML = require('yamljs');
+const path = require('path');
 
 const app = express();
 
@@ -37,16 +39,33 @@ app.get('/', (req, res) => {
   });
 });
 
+// File uploading
+app.use(fileupload());
+
+// Set static folder
+// By making public folder as static we can access images like this "http://localhost:3000/uploads/photo_5d725a1b7b292f5f8ceff788.jpg"
+app.use(express.static(path.join(__dirname, 'public')));
+
+// Mount Routers
+app.use(API + '/bootcamps', bootcampsRouter);
+app.use(API + '/courses', coursesRouter);
+
+// app.post(API + '/bootcamps/upload', (req, res, next) => {
+//   console.log('Test File');
+//   if (!req.files) {
+//     return next(new Error('Please upload a file', 400));
+//   }
+//   res.status(200).json({
+//     MESSAGE: 'Welcome to DevCamper REST API. Use /api/v1/.... to proceed ',
+//   });
+// });
+
 // Load Swagger
 app.use(
   API + '/swagger',
   swaggerUi.serve,
   swaggerUi.setup(YAML.load('./swagger.yml'), { explorer: true })
 );
-
-// Mount Routers
-app.use(API + '/bootcamps', bootcampsRouter);
-app.use(API + '/courses', coursesRouter);
 
 // Load Error Handler
 app.use(errorHandler);
