# routers/bootcamps.router.js
@@ -1,6 +1,8 @@
 const express = require('express');
 const router = express.Router();
 const bootcampsController = require('../controllers/bootcamps.controller');
+const advancedResults = require('../middleware/advancedResults');
+const Bootcamp = require('../models/Bootcamp.model');
 
 // Include other resource routers
 const coursesRouter = require('./courses.router');
@@ -8,7 +10,14 @@ const coursesRouter = require('./courses.router');
 // Re-route into other resource routers
 router.use('/:bootcampId/courses', coursesRouter);
 
-router.get('/', bootcampsController.getBootcamps);
+router.get(
+  '/',
+  advancedResults(Bootcamp, {
+    path: 'courses',
+    select: 'title description',
+  }),
+  bootcampsController.getBootcamps
+);
 router.get('/:id', bootcampsController.getBootcamp);
 router.post('/', bootcampsController.createBootcamp);
 router.put('/:id', bootcampsController.updateBootcamp);
@@ -17,5 +26,7 @@ router.get(
   '/radius/:zipcode/:distance/:unit',
   bootcampsController.getBootcampsInRadius
 );
+router.put('/:id/photo', bootcampsController.uploadBootcampPhoto);
+router.post('/upload', bootcampsController.uploadMethod);
 
 module.exports = router;
